refactor: update demo HTML structure and localize confirmation messages in demo.js

--- a/demo-simple/demo.html
+++ b/demo-simple/demo.html
@@ -24,9 +24,15 @@
 			width: 90px;
 		} 
 	</style>
+
+	<!-- Edicus SDK 스크립트 -->
+	<script src='../edicus-sdk-v2.js'></script>	
+	<!-- 데모 코드 스크립트 -->
+	<script type="module" src='demo.js'></script>	
 </head>
 
 <body>
+
 	<h3>Edicus Cloud Editor / Site Integration Test</h3>
 	<div style='margin: 10px 0px;'>	
 		<!-- 로그인 및 로그아웃 관련 UI -->
@@ -85,9 +91,6 @@
 	<div id='edicus_container' class='editor-frame'>
 	</div>
 
-	<script src='../edicus-sdk-v2.js'></script>	
-	<!-- <script src='server.js'></script> -->
-	<script type="module" src='demo.js'></script>	
 </body>
 
 </html>
