refactor: enhance demo layout and improve thumbnail display in demo.js

--- a/demo-simple/demo.html
+++ b/demo-simple/demo.html
@@ -65,7 +65,7 @@
 	<div style='margin: 10px 0px;'>	
 		<span class='line-head'>Preivew : </span>
 		<input type='button' id='btn_show_preview_tn' value='get preview thumbnail(s)'>
-		<div id='preview_tn_container'></div>
+		<div id='preview_tn_container' style="margin-top: 10px; margin-left: 90px;"></div>
 	</div>
 	<div style='margin: 10px 0px;'>	
 		<span class='line-head'>Order : </span>
