refactor: remove unused button for editing template and localize alert messages in demo.js

--- a/demo-simple/demo.html
+++ b/demo-simple/demo.html
@@ -79,13 +79,9 @@
 		<span class='line-head'>상품 생성 : </span>
 		<input type='button' id='btn_create_one'   value='create 명함'>
 	</div>
-	<div style='margin: 10px 0px;'>
-		<span class='line-head'>Editor : </span>
-		<input type='button' id='btn_open_edit_template' value='open edit template'>
-	</div>
 
 	<div style='margin: 10px 0px;'>
-		Log: <span id='action-log'></span>
+		로그: <span id='action-log'></span>
 	</div>
 
 	<div id='edicus_container' class='editor-frame'>
