refactor: add project data retrieval and display functionality in demo.js and update demo layout

--- a/demo-simple/demo.html
+++ b/demo-simple/demo.html
@@ -10,7 +10,7 @@
 	<script src='https://code.jquery.com/jquery-1.12.4.min.js'></script>
 	<style type='text/css'>
 		body {
-			background-color: #D3D3D3;  
+			background-color: white;  
 		}
 
 		.editor-frame {
@@ -61,6 +61,8 @@
 		<input type='button' id='btn_clone_project' value='복제'>
 		<input type='button' id='btn_delete_project' value='삭제'>
 		<span> (프로젝트 선택후 order 또는 delete 가능)</span>
+		<div id="project_data_table_container" style="margin-top: 10px; margin-left: 110px;">
+		</div>
 	</div>		
 	<div style='margin: 10px 0px;'>	
 		<span class='line-head'>썸네일  : </span>
