refactor: update demo title and localize alert messages in demo.js

--- a/demo-simple/demo.html
+++ b/demo-simple/demo.html
@@ -33,7 +33,7 @@
 
 <body>
 
-	<h3>Edicus Cloud Editor / Site Integration Test</h3>
+	<h3>Edicus Editor Demo</h3>
 	<div style='margin: 10px 0px;'>	
 		<!-- 로그인 및 로그아웃 관련 UI -->
 		<span class='line-head'>Login : </span>
