refactor: update editor container visibility handling and improve project state management in demo.js and project.js

--- a/demo-simple/demo.html
+++ b/demo-simple/demo.html
@@ -17,7 +17,7 @@
 			position:relative;
 			margin: 10px;
 			height: 760px;
-			background-color: cyan;
+			background-color: lightgray;
 		}   
 		.line-head {
 			display: inline-block;
@@ -86,8 +86,7 @@
 		로그: <span id='action-log'></span>
 	</div>
 
-	<div id='edicus_container' class='editor-frame'>
-	</div>
+	<div id='edicus_container' class='editor-frame' style='display: none;'></div>
 
 </body>
 
