refactor: localize UI text in demo.html and remove unused thumbnail preview button in demo.js for improved clarity

--- a/demo-simple/demo.html
+++ b/demo-simple/demo.html
@@ -70,11 +70,10 @@
 	</div>		
 	<div class="section">	
 		<span class='line-head'>썸네일  : </span>
-		<input type='button' id='btn_show_preview_tn' value='썸네일 가져오기'>
 		<div id='preview_tn_container' style="margin-top: 10px; margin-left: 110px;"></div>
 	</div>
 	<div class="section">	
-		<span class='line-head'>Order : </span>
+		<span class='line-head'>주문 : </span>
 		<input type='button' id='btn_tentative_order_project' value='잠정 주문'>
 		<input type='button' id='btn_tentative_order_vdp' value='잠정 주문 (vdp-dataset 포함)'>
 		<input type='button' id='btn_definitive_order_project' value='확정 주문'>
