refactor: implement template selection dropdown in demo.html and update product creation logic in demo.js for enhanced user interaction

--- a/demo-simple/demo.html
+++ b/demo-simple/demo.html
@@ -82,7 +82,10 @@
 	<hr>
 	<div class="section">
 		<span class='line-head'>상품 생성 : </span>
-		<input type='button' id='btn_create_one'   value='create 명함'>
+		<select id='select-template' style='height:26px; min-width: 200px;'>
+			<option value="">템플릿 선택</option>
+		</select>
+		<input type='button' id='btn_create_one' value='생성'>
 	</div>
 
 	<hr>
