--- a/demo-simple/demo.html
+++ b/demo-simple/demo.html
@@ -14,9 +14,14 @@
 		}
 
 		.editor-frame {
-			position:relative;
-			margin: 20px 10px 40px 10px;
-			height: 760px;
+			display: none;
+			position:absolute;
+			top: 24px;
+			left: 24px;
+			right: 24px;
+			bottom: 24px;
+			box-shadow: 0 4px 24px 4px rgba(0,0,0,0.60);
+
 			background-color: #f0f0f0;
 			border: 1px solid #ddd;
 		}   
