feat: integrate Tailwind CSS for enhanced styling in demo.html; update project.js to refine save-doc-report handling with additional logging for better debugging

--- a/demo-simple/demo.html
+++ b/demo-simple/demo.html
@@ -8,6 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<script src='https://code.jquery.com/jquery-1.12.4.min.js'></script>
+	<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 	<style type='text/css'>
 		body {
 			background-color: white;  
@@ -41,8 +42,8 @@
 	<script type="module" src='demo.js'></script>	
 </head>
 
-<body>
-	<h3>Edicus 편집기 테스트</h3>
+<body class="p-4">
+	<p class="text-2xl font-bold">Edicus 편집기 테스트</p>
 	<div class="section">	
 		<!-- 로그인 및 로그아웃 관련 UI -->
 		<span class='line-head'>로그인 : </span>
