feat: add dynamic form field generation for TnView projects in index.js; update index.html to include form fields container and adjust styling

--- a/demo-vdp/index.html
+++ b/demo-vdp/index.html
@@ -24,6 +24,11 @@
 			border: 1px solid #ddd;
 		}   
 
+		#form_fields_container {
+			margin-top: 10px;
+			margin-left: 110px;
+		}
+
 	</style>
 
 	<!-- Edicus SDK 스크립트 -->
@@ -75,6 +80,11 @@
 
 	<div>
 		f_name: <input type='text' id='f_name' value='전우치'>
+	</div>
+
+	<div id='form_fields_container' style="display: flex; gap: 12px;">
+		<div id="front-page"></div>
+		<div id="back-page"></div>
 	</div>
 </body>
 
