refactor: rename createProduct to createTnViewProject for clarity; update callback handling and context usage in TnView functions for improved state management

--- a/demo-vdp/index.html
+++ b/demo-vdp/index.html
@@ -69,7 +69,7 @@
 		<span class='line-head'>상품 생성 : </span>
 		<select id='select-template' style='height:26px; min-width: 200px;'>
 		</select>
-		<input type='button' id='btn_create_' value='생성'>
+		<input type='button' id='btn_create_tnview' value='생성'>
 		<input type='button' id='btn_save_vdp' value='저장하기'>
 	</div>
 
