refactor: update Context class to enhance text field updates by synchronizing all fields; improve index.html title for clarity and remove unnecessary comments in vdp-catalog.js

--- a/demo-vdp/index.html
+++ b/demo-vdp/index.html
@@ -41,7 +41,7 @@
 </head>
 
 <body class="p-4">
-	<p class="text-2xl font-bold">Edicus 편집기 테스트</p>
+	<p class="text-2xl font-bold">Edicus VDP(Variable Data Printing) 편집기 테스트</p>
 	<div class="section">	
 		<!-- 로그인 및 로그아웃 관련 UI -->
 		<span class='line-head'>로그인 : </span>
