refactor: improve editor visibility management in Context class by centralizing update logic; adjust HTML structure for better layout and visibility control of save button

--- a/demo-vdp/index.html
+++ b/demo-vdp/index.html
@@ -73,20 +73,23 @@
 		<select id='select-template' style='height:26px; min-width: 200px;'>
 		</select>
 		<input type='button' id='btn_create_tnview' value='생성'>
-		<input type='button' id='btn_save_vdp' value='저장하기'>
 	</div>
 
-
-	<div style="margin-left: 110px; margin-top: 10px;">
+	<div style="margin: 10px 0 10px 110px;">
 		<div style="background-color: #f0f0f0; padding: 8px;">
 			<div id='edicus_container' class='editor-frame'></div>
 		</div>
-	
-		<div id='form_fields_container' style="display: flex; gap: 8px; padding:8px">
+	</div>
+
+	<hr>
+	<div class="section" style="margin-left: 110px;">
+		<div id='form_fields_container' style="display: flex; gap: 8px; padding:8px;">
 			<div id="front-page"></div>
 			<div id="back-page"></div>
-		</div>
+		</div>		
+		<input type='button' id='btn_save_vdp' value='저장하기' style="display: none;">
 	</div>
+
 </body>
 
 </html>
