--- a/demo-vdp/index.html
+++ b/demo-vdp/index.html
@@ -86,8 +86,11 @@
 		<div id='form_fields_container' style="display: flex; gap: 8px; padding:8px;">
 			<div id="front-page"></div>
 			<div id="back-page"></div>
+		</div>
+		<div id="btn_list" style="display: none;">
+			<input type='button' id='btn_save_vdp' value='저장하기'>
+			<input type='button' id='btn_close' value='닫기'>
 		</div>		
-		<input type='button' id='btn_save_vdp' value='저장하기' style="display: none;">
 	</div>
 
 </body>
