--- a/demo-simple/demo.html
+++ b/demo-simple/demo.html
@@ -43,7 +43,7 @@
 </head>
 
 <body class="p-4">
-	<p class="text-2xl font-bold">Edicus 편집기 테스트</p>
+	<h2 class="text-2xl font-bold">Edicus 편집기 테스트</h2>
 	<div class="section">	
 		<!-- 로그인 및 로그아웃 관련 UI -->
 		<span class='line-head'>로그인 : </span>
