--- a/demo-vdp/index.html
+++ b/demo-vdp/index.html
@@ -8,7 +8,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<script src='https://code.jquery.com/jquery-1.12.4.min.js'></script>
-	<!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
 	<style type='text/css'>
 		.section {
 			margin: 20px 0px;
@@ -41,7 +40,7 @@
 </head>
 
 <body class="p-4">
-	<p class="text-2xl font-bold">Edicus VDP(Variable Data Printing) 편집기 테스트</p>
+	<h2 class="text-2xl font-bold">Edicus VDP(Variable Data Printing) 편집기 테스트</h2>
 	<div class="section">	
 		<!-- 로그인 및 로그아웃 관련 UI -->
 		<span class='line-head'>로그인 : </span>
