refactor: rename demo-simple to demo-basic and update references in index.html; remove obsolete demo files to streamline project structure

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <h1 class="text-center text-[#2c3e50] mb-8 text-3xl font-bold">Edicus SDK Demos</h1>
     
     <div class="bg-white rounded-lg p-8 mb-6 shadow transition-transform duration-200 ease-in-out border border-[#e1e1e1] hover:-translate-y-[5px] hover:shadow-md">
-        <div class="text-2xl font-bold mb-2 text-[#007bff]">Demo Simple</div>
+        <div class="text-2xl font-bold mb-2 text-[#007bff]">Demo Basic</div>
         <div class="mb-4 text-[#666]">
             Edicus 편집기 기본 기능 테스트 예제입니다.<br>
             프로젝트 생성, 열기, 썸네일 확인, 주문 처리 등 SDK의 핵심 기능을 체험해볼 수 있습니다.
         </div>
-        <a href="demo-simple/demo.html" class="inline-block text-white bg-[#007bff] px-4 py-2 rounded font-medium hover:bg-[#0056b3] no-underline">이동하기 &rarr;</a>
+        <a href="demo-basic/index.html" class="inline-block text-white bg-[#007bff] px-4 py-2 rounded font-medium hover:bg-[#0056b3] no-underline">이동하기 &rarr;</a>
     </div>
 
     <div class="bg-white rounded-lg p-8 mb-6 shadow transition-transform duration-200 ease-in-out border border-[#e1e1e1] hover:-translate-y-[5px] hover:shadow-md">
