--- a/demo-basic/index.html
+++ b/demo-basic/index.html
@@ -39,11 +39,11 @@
 	<!-- Edicus SDK 스크립트 -->
 	<script src='../edicus-sdk-v2.js'></script>	
 	<!-- 데모 코드 스크립트 -->
-	<script type="module" src='demo.js'></script>	
+	<script type="module" src='index.js'></script>	
 </head>
 
 <body class="p-4">
-	<h2 class="text-2xl font-bold">Edicus 편집기 테스트</h2>
+	<h2 class="text-2xl font-bold">Edicus 편집기 테스트 v1.0.0</h2>
 	<div class="section">	
 		<!-- 로그인 및 로그아웃 관련 UI -->
 		<span class='line-head'>로그인 : </span>
