--- a/demo-vdp/index.html
+++ b/demo-vdp/index.html
@@ -40,7 +40,7 @@
 </head>
 
 <body class="p-4">
-	<h2 class="text-2xl font-bold">Edicus VDP(Variable Data Printing) 편집기 테스트</h2>
+	<h2 class="text-2xl font-bold">Edicus VDP 편집기 테스트 v1.0.0</h2>
 	<div class="section">	
 		<!-- 로그인 및 로그아웃 관련 UI -->
 		<span class='line-head'>로그인 : </span>
