--- a/demo-basic/index.html
+++ b/demo-basic/index.html
@@ -8,33 +8,25 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<script src='https://code.jquery.com/jquery-1.12.4.min.js'></script>
-	<!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
-	<style type='text/css'>
-		body {
-			background-color: white;  
-		}
-
-		.editor-frame {
-			display: none;
-			position:absolute;
-			top: 24px;
-			left: 24px;
-			right: 24px;
-			bottom: 24px;
-			box-shadow: 0 4px 24px 4px rgba(0,0,0,0.60);
-
-			background-color: #f0f0f0;
-			border: 1px solid #ddd;
-		}   
-		.line-head {
-			display: inline-block;
-			width: 110px;
-		} 
-
-		.section {
-			margin: 20px 0px;
-		}
-	</style>
+	<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+	<style>
+        .btn-custom {
+            background-color: #4B5563; /* bg-gray-600 */
+            color: white; /* text-white */
+            padding: 0.375rem 1rem; /* px-4 py-1.5 */
+            border-radius: 0.25rem; /* rounded */
+            font-size: 0.875rem; /* text-sm */
+            font-weight: 500; /* font-medium */
+            cursor: pointer; /* cursor-pointer */
+            transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            transition-duration: 150ms; /* transition */
+            border: none;
+        }
+        .btn-custom:hover {
+            background-color: #374151; /* hover:bg-gray-700 */
+        }
+    </style>
 
 	<!-- Edicus SDK 스크립트 -->
 	<script src='../edicus-sdk-v2.js'></script>	
@@ -42,61 +34,83 @@
 	<script type="module" src='index.js'></script>	
 </head>
 
-<body class="p-4">
-	<h2 class="text-2xl font-bold">Edicus 편집기 테스트 v1.0.0</h2>
-	<div class="section">	
-		<!-- 로그인 및 로그아웃 관련 UI -->
-		<span class='line-head'>로그인 : </span>
-		<span id='login_status' style='display: none;'>
-			<strong id='logged_user_id'></strong>
-			<input type='button' id='btn_user_logout' value='Logout' style='margin-left: 10px;'>
+<body class="p-8 bg-gray-50 text-gray-800 font-sans">
+    <div class="flex justify-between items-center mb-8 border-b pb-4">
+        <h2 class="text-2xl font-bold text-gray-900">Edicus 편집기 테스트 v1.0.0</h2>
+        <a href="../index.html" class="text-gray-500 hover:text-gray-700 text-sm font-medium no-underline hover:underline">
+            ← 메인 페이지로 돌아가기
+        </a>
+    </div>
+
+    <!-- 로그인 및 로그아웃 관련 UI -->
+    <div class="mb-6 flex items-center">	
+		<span class='inline-block w-[110px] font-semibold text-gray-700'>로그인 : </span>
+		<span id='login_status' style='display: none;' class="flex items-center">
+			<strong id='logged_user_id' class="text-blue-700 mr-4"></strong>
+			<input type='button' id='btn_user_logout' value='Logout' class="btn-custom">
 		</span>
-		<span id='login_form'>
-			<input type='text' id='input_user_id' value='' placeholder='User ID' style='width: 200px; margin-right: 10px;'>
-			<input type='button' id='btn_user_login' value='Login'>
+		<span id='login_form' class="flex items-center">
+			<input type='text' id='input_user_id' value='' placeholder='User ID' class="border border-gray-300 rounded px-3 py-1.5 w-48 mr-2 focus:outline-none focus:ring-2 focus:ring-blue-500 text-sm">
+			<input type='button' id='btn_user_login' value='Login' class="btn-custom">
 		</span>
-	</div>
-	<hr>
-	<div class="section">	
-		<span class='line-head'>옵션 :</span>
-	  <label><input id='checkbox_mobile' type='checkbox'>mobile</label>
-	</div>
-	<div class="section">	
-		<span class='line-head'>프로젝트 :</span>
-		<select id='select-project-id' style='height:26px'>
-			<option >select project id here</option>
-		</select>
-		<input type='button' id='btn_get_project_list' value='프로젝트 리스트 얻기'>
-		<input type='button' id='btn_open_project' value='열기'>
-		<input type='button' id='btn_clone_project' value='복제'>
-		<input type='button' id='btn_delete_project' value='삭제'>
-		<span> (프로젝트 선택후 order 또는 delete 가능)</span>
-		<div id="project_data_table_container" style="margin-top: 10px; margin-left: 110px;">
-		</div>
-	</div>		
-	<div class="section">	
-		<span class='line-head'>썸네일  : </span>
-		<div id='preview_tn_container' style="margin-top: 10px; margin-left: 110px;"></div>
-	</div>
-	<div class="section">	
-		<span class='line-head'>주문 : </span>
-		<input type='button' id='btn_tentative_order_project' value='잠정 주문'>
-		<input type='button' id='btn_tentative_order_vdp' value='잠정 주문 (vdp-dataset 포함)'>
-		<input type='button' id='btn_definitive_order_project' value='확정 주문'>
-		<input type='button' id='btn_cancel_order_project' value='주문 취소'>
-	</div>		
-	<hr>
-	<div class="section">
-		<span class='line-head'>상품 생성 : </span>
-		<select id='select-template' style='height:26px; min-width: 200px;'>
-			<option value="">템플릿 선택</option>
-		</select>
-		<input type='button' id='btn_create_one' value='생성'>
 	</div>
 
-	<hr>
+	<hr class="my-6 border-gray-200">
+
+	<div class="mb-6 flex items-center">	
+		<span class='inline-block w-[110px] font-semibold text-gray-700'>옵션 :</span>
+	  <label class="flex items-center cursor-pointer"><input id='checkbox_mobile' type='checkbox' class="mr-2">mobile</label>
+	</div>
+
+	<div class="mb-6">	
+        <div class="flex items-center mb-2">
+            <span class='inline-block w-[110px] font-semibold text-gray-700'>프로젝트 :</span>
+            <select id='select-project-id' class="border border-gray-300 rounded px-2 py-1.5 bg-white mr-2 focus:outline-none focus:ring-2 focus:ring-blue-500 text-sm min-w-[200px]">
+                <option >select project id here</option>
+            </select>
+            <div class="space-x-1">
+                <input type='button' id='btn_get_project_list' value='프로젝트 리스트 얻기' class="btn-custom">
+                <input type='button' id='btn_open_project' value='열기' class="btn-custom">
+                <input type='button' id='btn_clone_project' value='복제' class="btn-custom">
+                <input type='button' id='btn_delete_project' value='삭제' class="btn-custom">
+            </div>
+            <span class="text-gray-500 text-xs ml-3"> (프로젝트 선택후 order 또는 delete 가능)</span>
+        </div>
+		<div id="project_data_table_container" class="mt-4 ml-[110px]">
+		</div>
+	</div>		
+
+	<div class="mb-6">	
+		<span class='inline-block w-[110px] font-semibold text-gray-700'>썸네일  : </span>
+		<div id='preview_tn_container' class="mt-2 ml-[110px]"></div>
+	</div>
+
+	<div class="mb-6">	
+        <div class="flex items-center">
+            <span class='inline-block w-[110px] font-semibold text-gray-700'>주문 : </span>
+            <div class="space-x-1">
+                <input type='button' id='btn_tentative_order_project' value='잠정 주문' class="btn-custom">
+                <input type='button' id='btn_tentative_order_vdp' value='잠정 주문 (vdp-dataset 포함)' class="btn-custom">
+                <input type='button' id='btn_definitive_order_project' value='확정 주문' class="btn-custom">
+                <input type='button' id='btn_cancel_order_project' value='주문 취소' class="btn-custom">
+            </div>
+        </div>
+	</div>		
+
+	<hr class="my-6 border-gray-200">
+
+	<div class="mb-6 flex items-center">
+		<span class='inline-block w-[110px] font-semibold text-gray-700'>상품 생성 : </span>
+		<select id='select-template' class="border border-gray-300 rounded px-2 py-1.5 bg-white mr-2 focus:outline-none focus:ring-2 focus:ring-blue-500 text-sm min-w-[200px]">
+			<option value="">템플릿 선택</option>
+		</select>
+		<input type='button' id='btn_create_one' value='생성' class="btn-custom">
+	</div>
+
+	<hr class="my-6 border-gray-200">
+
 	<!-- 편집기 컨테이너 영역 -->
-	<div id='edicus_container' class='editor-frame'></div>
+	<div id='edicus_container' class='hidden absolute top-6 left-6 right-6 bottom-6 shadow-[0_4px_24px_4px_rgba(0,0,0,0.60)] bg-[#f0f0f0] border border-[#ddd]'></div>
 </body>
 
 </html>
