--- a/demo-vdp/index.html
+++ b/demo-vdp/index.html
@@ -36,7 +36,12 @@
 </head>
 
 <body class="p-8 bg-gray-50 text-gray-800 font-sans">
-	<h2 class="text-3xl font-bold mb-8 text-gray-900 border-b pb-4">Edicus VDP 편집기 테스트 v1.0.0</h2>
+    <div class="flex justify-between items-center mb-8 border-b pb-4">
+        <h2 class="text-2xl font-bold text-gray-900">Edicus VDP 편집기 테스트 v1.0.0</h2>
+        <a href="../index.html" class="text-gray-500 hover:text-gray-700 text-sm font-medium no-underline hover:underline">
+            ← 메인 페이지로 돌아가기
+        </a>
+    </div>
 	
     <!-- 로그인 섹션 -->
 	<div class="mb-6 flex items-center">	
