--- a/demo-vdp/index.html
+++ b/demo-vdp/index.html
@@ -102,8 +102,17 @@
 			<div id="back-page" class="flex-1"></div>
 		</div>
 		<div id="btn_list" style="display: none;" class="mt-4 space-x-2">
-			<input type='button' id='btn_save_vdp' value='저장하기' class="btn-custom">
-			<input type='button' id='btn_close' value='닫기' class="btn-custom">
+			<div class="space-x-1">
+				<input type='button' id='btn_save_vdp' value='저장하기' class="btn-custom">
+				<input type='button' id='btn_close' value='닫기' class="btn-custom">
+			</div>
+			<div>
+				<div class="space-x-1 mt-2">
+					<input type='button' id='btn_tentative_order_vdp' value='잠정 주문 (vdp-dataset 포함)' class="btn-custom">
+					<input type='button' id='btn_definitive_order_project' value='확정 주문' class="btn-custom">
+					<input type='button' id='btn_cancel_order_project' value='주문 취소' class="btn-custom">
+				</div>				
+			</div>
 		</div>		
 	</div>
 
