--- a/demo-vdp/index.html
+++ b/demo-vdp/index.html
@@ -43,6 +43,12 @@
         </a>
     </div>
 	
+    <!-- 파트너 코드 표시 -->
+    <div id="partner_info" class="flex items-center mb-6">
+        <div class='w-[110px] font-semibold text-gray-700'>파트너 코드 </div>
+        <div id='partner_code' class="text-gray-500 text-md"></div>
+    </div>
+
     <!-- 로그인 섹션 -->
 	<div class="mb-6 flex items-center">	
 		<span class='inline-block w-[110px] font-semibold text-gray-700'>로그인 </span>
