--- a/demo-vdp/index.html
+++ b/demo-vdp/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<title>Edicus Site Sample</title>
+	<title>Edicus Editor VDP Demo</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<script src='https://code.jquery.com/jquery-1.12.4.min.js'></script>
