--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edicus SDK Demos</title>
+    <title>Edicus Editor Demo</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body class="font-sans leading-relaxed text-[#333] max-w-[800px] mx-auto p-8 bg-[#f9f9f9]">
-    <h1 class="text-center text-[#2c3e50] mb-8 text-3xl font-bold">Edicus SDK Demos</h1>
+    <h1 class="text-center text-[#2c3e50] mb-8 text-3xl font-bold">Edicus Editor Demo</h1>
     
     <div class="bg-white rounded-lg p-8 mb-6 shadow transition-transform duration-200 ease-in-out border border-[#e1e1e1] hover:-translate-y-[5px] hover:shadow-md">
         <div class="text-2xl font-bold mb-2 text-[#007bff]">Demo Basic</div>
